--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,3 +21,8 @@ jobs:
         VERSION=$(git rev-parse HEAD)
         pkg src/index.js -o 'binary-'$VERSION
         echo "latest package name: binary-$VERSION"
+        echo "artifactPath=$(ls binary-*)" >> $GITHUB_ENV
+    - uses: actions/upload-artifact@v2
+      with:
+        name: artifact
+        path: ${{ env.artifactPath }}
