download and deploy artifact

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,3 +26,18 @@ jobs:
       with:
         name: artifact
         path: ${{ env.artifactPath }}
+
+  deploy:
+    runs-on: self-hosted
+    steps:
+    - uses: actions/download-artifact@v2
+    with:
+      name: artifact
+      path: /opt/latest-artifact
+
+    - name: 'Echo download path'
+      run: echo ${{steps.download.outputs.download-path}}
+
+    - run: |
+        echo "running deployed app as a background process"
+        nohup /opt/latest-artifact &
