--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -36,7 +36,7 @@ jobs:
     - uses: actions/download-artifact@v2
       with:
         name: artifact
-        path: /opt
+        path: /test
 
     - run: |
         echo "running deployed app as a background process"
