--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -39,7 +39,8 @@ jobs:
         path: /test
 
     - run: |
-        echo "running deployed app as a background process"
+        echo "deploying app and will expose port 8081"
         bin_file=$(ls /test/ | head -n 1)
         chmod -R +x /test/
-        /test/./$bin_file &
+        /test/./$bin_file
+    - run: echo "application deployed and listening on port 8081"
