--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -14,6 +14,7 @@ jobs:
     name: build_nodejs_app
     runs-on: self-hosted
     steps:
+    - uses: actions/checkout@v2
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
