--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,22 +29,33 @@ jobs:
         name: artifact
         path: ${{ env.artifactPath }}
 
+  # deploy_nodejs_app:
+  #   name: deploy_nodejs_app
+  #   needs: build_nodejs_app
+  #   runs-on: [self-hosted, deployment]
+  #   steps:
+  #   - uses: actions/checkout@v2
+  #   - uses: actions/setup-node@v2
+  #     with:
+  #       node-version: 16.x
+  #       cache: 'npm'
+  #   - uses: actions/download-artifact@v2
+  #     with:
+  #       name: artifact
+  #   - run: |
+  #       echo "deploying app and will expose port 8081"
+  #       bin_file=$(ls binary-* | head -n 1)
+  #       chmod +x $bin_file
+  #       nohup ./$bin_file > app_log  2>&1 &
+  #   - run: echo "application deployed and listening on port 8081"
+
   deploy_nodejs_app:
     name: deploy_nodejs_app
     needs: build_nodejs_app
     runs-on: [self-hosted, deployment]
     steps:
     - uses: actions/checkout@v2
-    - uses: actions/setup-node@v2
-      with:
-        node-version: 16.x
-        cache: 'npm'
     - uses: actions/download-artifact@v2
       with:
         name: artifact
-    - run: |
-        echo "deploying app and will expose port 8081"
-        bin_file=$(ls binary-* | head -n 1)
-        chmod +x $bin_file
-        nohup ./$bin_file > app_log  2>&1 &
-    - run: echo "application deployed and listening on port 8081"
+    - uses: vinay-nandipur/local_node_action@v1.0.0
